# snappy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  snappy.pro  toolchain-mingw64.cmake
docs/: RELEASING.md
resources/: resources.qrc  snappy.rc
src/: annotationitems.cpp  annotationitems.h  application.cpp  application.h  canvasview.cpp  canvasview.h  editorwindow.cpp  editorwindow.h  globalhotkey.cpp  globalhotkey.h  main.cpp  preferencesdialog.cpp  preferencesdialog.h  screenshotmanager.cpp  screenshotmanager.h  snipoverlay.cpp  snipoverlay.h  toolbar.cpp  toolbar.h
